@@ -1,1 +1,2 @@
 .travis.yml
+^.*\.tar\.gz$
